Fix background for select
To avoid invisible text like https://clip2net.com/s/3RF36jX

--- a/www/static/style.css
+++ b/www/static/style.css
@@ -61,7 +61,7 @@ body {
 
 #header select {
     overflow: hidden;
-    background: transparent;
+    background-color: #335;
     color: #eee;
     border: none;
 }
